// file: proto/gcommon/v1/database/cache_stats.proto
// version: 1.0.0
// guid: mn3opqrs-45t6-7u8v-9w0x-1y2z3a4b5c6d

edition = "2023";

package database.v1;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/database/v1";

/**
 * Cache statistics and performance metrics.
 * Provides detailed information about cache usage and performance.
 */
message CacheStats {
  // Total number of cached items
  int64 total_items = 1 [(buf.validate.field).int64.gte = 0];

  // Total cache hits
  int64 cache_hits = 2 [(buf.validate.field).int64.gte = 0];

  // Total cache misses
  int64 cache_misses = 3 [(buf.validate.field).int64.gte = 0];

  // Cache hit ratio (0.0 to 1.0)
  double hit_ratio = 4 [(buf.validate.field).double.gte = 0.0];

  // Memory usage in bytes
  int64 memory_usage = 5 [(buf.validate.field).int64.gte = 0];

  // Maximum memory limit in bytes
  int64 memory_limit = 6 [(buf.validate.field).int64.gte = 0];

  // Number of evicted items
  int64 evicted_items = 7 [(buf.validate.field).int64.gte = 0];

  // Number of expired items
  int64 expired_items = 8 [(buf.validate.field).int64.gte = 0];

  // Average access time in milliseconds
  double avg_access_time_ms = 9 [(buf.validate.field).double.gte = 0.0];

  // Last reset timestamp
  google.protobuf.Timestamp last_reset = 10;

  // Cache uptime in seconds
  int64 uptime_seconds = 11 [(buf.validate.field).int64.gte = 0];
}
